crates/bonsaidb-macros/tests/ui/collection/missing_name.stderr
error: required `name` is not specified

       = help: try `#[collection(name = "name")]`
 --> tests/ui/collection/missing_name.rs:3:10
  |
3 | #[derive(Collection)]
  |          ^^^^^^^^^^
  |
  = note: this error originates in the derive macro `Collection` (in Nightly builds, run with -Z macro-backtrace for more info)
