crates/bonsaidb-macros/tests/ui/collection/missing_name.rs
use bonsaidb::core::schema::Collection;

#[derive(Collection)]
#[collection(authority = "hello")]
struct Test;

fn main() {}
